ip6tables.rules
-N CLOUDFLARE

-A INPUT -p tcp -m tcp --dport 443 -j CLOUDFLARE

-A CLOUDFLARE -s 2400:cb00::/32 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 2606:4700::/32 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 2803:f800::/32 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 2405:b500::/32 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 2405:8100::/32 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 2a06:98c0::/29 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 2c0f:f248::/32 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT

-A CLOUDFLARE -j DROP
