iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [10:0]
:CLOUDFLARE - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j CLOUDFLARE
-A INPUT -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "SSH" -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A CLOUDFLARE -s 103.21.244.0/22 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 103.22.200.0/22 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 103.31.4.0/22 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 104.16.0.0/13 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 104.24.0.0/14 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 108.162.192.0/18 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 131.0.72.0/22 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 141.101.64.0/18 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 162.158.0.0/15 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 172.64.0.0/13 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 173.245.48.0/20 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 188.114.96.0/20 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 190.93.240.0/20 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 197.234.240.0/22 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -s 198.41.128.0/17 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m comment --comment "CloudFlare IP" -j ACCEPT
-A CLOUDFLARE -j RETURN
COMMIT
